--- a/index.html
+++ b/index.html
@@ -2178,9 +2178,8 @@ body {
   OneSignalDeferred.push(async function(OneSignal) {
     await OneSignal.init({
       appId: "09cf47e1-545a-4a0b-9873-f09cc9a71707",
-      serviceWorkerPath: "App-da-Kika/OneSignalSDKWorker.js",
-      serviceWorkerUpdaterPath: "App-da-Kika/OneSignalSDKUpdaterWorker.js",
-      serviceWorkerParam: { scope: "/App-da-Kika/" }
+      serviceWorkerPath: "/OneSignalSDKWorker.js",
+      serviceWorkerUpdaterPath: "/OneSignalSDKUpdaterWorker.js",
       allowLocalhostAsSecureOrigin: true
       // safariWebId: "web.onesignal.auto.SEUSAFARIID" // se usares Safari
     });
