--- a/index.html
+++ b/index.html
@@ -2242,8 +2242,8 @@ body {
   OneSignalDeferred.push(async function(OneSignal) {
     await OneSignal.init({
       appId: "09cf47e1-545a-4a0b-9873-f09cc9a71707",
-      serviceWorkerPath: "/OneSignalSDKWorker.js",
-      serviceWorkerUpdaterPath: "/OneSignalSDKUpdaterWorker.js",
+      serviceWorkerPath: "App-da-Kika/OneSignalSDKWorker.js",
+      serviceWorkerUpdaterPath: "App-da-Kika/OneSignalSDKUpdaterWorker.js",
       allowLocalhostAsSecureOrigin: true
       // safariWebId: "web.onesignal.auto.SEUSAFARIID" // se usares Safari
     });
