--- a/index.html
+++ b/index.html
@@ -2245,8 +2245,11 @@ body {
   OneSignalDeferred.push(async function(OneSignal) {
     await OneSignal.init({
       appId: "09cf47e1-545a-4a0b-9873-f09cc9a71707",
-      safari_web_id: "web.onesignal.auto.2900aeea-27da-4bc5-9f95-2e3d9a76781c",
+      safari_web_id: "eb.onesignal.auto.2900aeea-27da-4bc5-9f95-2e3d9a76781c",
       notifyButton: { enable: true },
+serviceWorkerPath: 'OneSignalSDKWorker.js',
+      serviceWorkerUpdaterPath: 'OneSignalSDKUpdaterWorker.js',
+      serviceWorkerParam: { scope: '/App-da-Kika/' },
       allowLocalhostAsSecureOrigin: true,
     });
 
